xrpl-wasm-stdlib/xrpl-macros/tests/currency/fail_non_literal.stderr
error: expected string literal
 --> tests/currency/fail_non_literal.rs:5:15
  |
5 |     currency!(code);
  |               ^^^^
