xrpl-wasm-stdlib/xrpl-macros/tests/currency/fail_non_literal.rs
use xrpl_macros::currency;

// The macro only accepts string literals, never runtime expressions.
fn convert(code: &str) {
    currency!(code);
}

fn main() {
    convert("USD");
}
